fixed spacing in tweets layout

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -29,7 +29,7 @@ body {
  main {
    width: 600px;
    margin: auto;
-   padding-top: 140px;
+   padding-top: 90px;
    background: #FFF;
    height: 100%;
  }
