--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -5,7 +5,6 @@
    overflow: auto;
    margin-bottom: 25px;
    padding-bottom: 25px;
-   margin-top: 25px;
    background: #F5F5F5;
    max-height: 200px;
  }
